# qwen3-agent

./: .gitignore  .justfile  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
scripts/: this.py
src/core/: pyproject.toml
src/core/src/core/: __init__.py
